--- a/changelog
+++ b/changelog
@@ -1,1030 +1,5 @@
-commit fdcf1f9f3c7dec68909a68b10a97dd7c92fc9856
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Feb 2 00:00:18 2015 -0430
-
-    Actualizando repo
-
-commit d4fa3cd64fdfd6c6af03eb2680b13806fbe94b88
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 27 08:59:15 2015 -0430
-
-    * changelog
-
-commit b25a6cadd4b429dbb2abfd7f0f85b7aac4a2a814
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 27 08:58:37 2015 -0430
-
-    * cambios menores
-
-commit 2e3dc25a73da68abc9b2bb045b5848637423e807
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 23 12:30:23 2015 -0430
-
-    * changelog
-
-commit 1e70315df86456e4bcb1375d4ffe215b686bc735
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 23 12:29:59 2015 -0430
-
-    *cambio menor
-
-commit fab2cda822928cff63f95cd72e67c208cc7dd475
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 23 11:52:26 2015 -0430
-
-    * changelog
-
-commit 58f4485e12abbb81ff572bb53f662aefdfb61d14
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 23 11:51:48 2015 -0430
-
-    * Correcion en modo de mostrar suscripciones
-
-commit 219604005c5a0488813895f00dabd8a99b6fae13
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 20 10:49:48 2015 -0430
-
-    * changelog
-
-commit 9d496210f4f0716187a49d26a00949b3c1027b65
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 20 10:49:01 2015 -0430
-
-    * corregido bug en nube de tag
-
-commit 0bdfc676fb0d82418770333127340eb8f10098e8
-Author: Hector A. Mantellini <xombra@users.noreply.github.com>
-Date:   Mon Jan 19 15:40:15 2015 -0430
-
-    Update core.php
-    
-    Mostrara solo las noticias que tengas un maximo de tiempo de publicacion
-
-commit b3aeb9e1c944feddc8c17cd9284c167e37298191
-Author: Hector A. Mantellini <xombra@users.noreply.github.com>
-Date:   Mon Jan 19 14:58:02 2015 -0430
-
-    Update content.php
-    
-    parámetro para tiempo max de nota publicada
-
-commit 36e7f8c16760581ade42fda882b929a24142cab3
-Author: Hector A. Mantellini <xombra@users.noreply.github.com>
-Date:   Mon Jan 19 14:56:14 2015 -0430
-
-    Update config.php
-    
-    agrgado opcion de maximo de tiempo de la ultima noticia de un blog
-
-commit a98dd00ed318e3bb46fedbb314fac85dfad36e3d
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 19 14:17:39 2015 -0430
-
-    * changelog
-
-commit bc54ad2d506e761d5327e97a6fa8dc58c71c157a
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 17 22:42:47 2015 -0430
-
-    * changelog
-
-commit a98f81afd933346b972f646726a54f0eb4636dd6
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 17 22:41:59 2015 -0430
-
-    * Correcion de bug en enlace q muestra la nota
-
-commit d69954c8e65094f1f5186b9dd2069438666ea4c0
-Author: Hector A. Mantellini <xombra@users.noreply.github.com>
-Date:   Fri Jan 16 22:58:25 2015 -0430
-
-    Update .htaccess
-    
-    cambios en valores
-
-commit 2461815ef990f28501ad6ea46cfb867feaea9ce4
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 16 19:06:05 2015 -0430
-
-    * changelog
-
-commit 8faf6babb0f2c2914d9aa47ab05fc085c33c252c
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 16 19:05:36 2015 -0430
-
-    * optimizacion
-
-commit 3dd9be990662aa45d34bbd93f649f00cbf99af20
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 16 15:46:43 2015 -0430
-
-    cambios menores
-
-commit 6d80663f4becdc64df1f876a6288abb24e0a616b
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 16 15:44:56 2015 -0430
-
-    Actualizando core
-
-commit 7d16a4058ed684c9892aa7ac96d1a26eb07e93c2
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 16 14:14:22 2015 -0430
-
-    Agregando funcionalidad sugerida por ajha63
-
-commit 61e9139306c415acdd720d69a35eb69cbd1102d2
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 16 13:05:00 2015 -0430
-
-    Agregado codigo de botones del planet
-
-commit 7f7697b8d32b3001a1e014583b20be4cfdf9db42
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 16 00:47:44 2015 -0430
-
-    * changelog
-
-commit 0c12f7c5f50996dad06218e43e8f16133056a283
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 16 00:47:03 2015 -0430
-
-    * solucionado problema en enlaces codificados
-
-commit ee58698f15f68808d553a44df35bef30130d28f0
-Author: xombra <xombra.com@gmail.com>
-Date:   Thu Jan 15 23:05:05 2015 -0430
-
-    * changelog
-
-commit 020bfb9c57d189fb33f6a9b24235bc8348128c05
-Author: xombra <xombra.com@gmail.com>
-Date:   Thu Jan 15 23:03:45 2015 -0430
-
-    * Modificacion de ompl
-    * agregado opciones en el HOWTO
-
-commit 15629ca8dc85af7a62e4cce6a0221598d920f1fe
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 19:19:16 2015 -0430
-
-    Agregado pop up para las politicas de uso
-
-commit 7c059a5ca47378da3d25b6b6a44a795d9f07992f
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 18:24:19 2015 -0430
-
-    Actualizando estilos e imagenes de Agreganos a tu web
-
-commit 2d357e1cd54e4ff6423220d0a5a9b2a463176880
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 18:03:46 2015 -0430
-
-    Actualizando estilos e imagenes de Agreganos a tu web
-
-commit 3b8cd69f7e0df10addb6a26dbfbcd32a8be04524
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 16:59:21 2015 -0430
-
-    Actualizando estilos de la pagina
-
-commit af00c4d1536eb488e74f1e2079382c9a81dd9c5d
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 16:05:11 2015 -0430
-
-    Actualizando los estilos de los botones de la nube de tags
-
-commit 466d5be23f2ba75f4782c56c1de528e3346c30e7
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 14:19:33 2015 -0430
-
-    Actualizando estilos e imagenes de la plantilla y de los avatares
-    Agregado estilo para las politicas de uso
-    Actualizacion del codigo de OPML y de index.php
-
-commit 887deae3dfb65b686bedf9b709183e0c420f93b4
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 12:20:35 2015 -0430
-
-    Actualizando contenido
-
-commit 5b7506ac01e8c8c3ca1297cbf8765dfb5e7b5da6
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 11:57:29 2015 -0430
-
-    Actualizado
-
-commit a8a4184c2b15dde3a7e5ad3d1d7a663791527fec
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 11:56:15 2015 -0430
-
-    Actualizacion de enlace de descarga OPML
-    Correccion de bug en backend sanitizacion de url feed
-
-commit 490bf694bd80c6357e4b6f388f4dbec4d452f7f1
-Author: abr4xas <me@abr4xas.org>
-Date:   Thu Jan 15 11:33:36 2015 -0430
-
-    Actualizando estilo de la pagina
-
-commit 59dc3b912d020e18f3fe3bc6836e1fbc2421b0e0
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 22:50:41 2015 -0430
-
-    * changelog
-
-commit 09bbdbead01d9eb5c3425c9c93c179bbc2fca8a4
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 22:49:09 2015 -0430
-
-    * inclusion opml
-
-commit bb80dcae9235451444c667d45a187a03ce23c9c1
-Author: abr4xas <me@abr4xas.org>
-Date:   Wed Jan 14 21:49:09 2015 -0430
-
-    Actualizando estilos de la pagina
-
-commit ffa3071604ebf4f58a0ed86e05b83f9168914ca9
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 20:25:45 2015 -0430
-
-    * cambios
-
-commit 4fcca392e25b12e06c5b977c7acd9bfc1e2b427c
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 20:20:43 2015 -0430
-
-    * changelog
-
-commit 53f162a0633f6b00e44af37e4893a9399572c641
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 20:20:10 2015 -0430
-
-    * solucion de redireccion y corregido enlaces en backend
-
-commit ec62484489c26e2151a56fcbc3592d7c019a011f
-Author: abr4xas <me@abr4xas.org>
-Date:   Wed Jan 14 14:58:09 2015 -0430
-
-    Agregando cambios del tema
-
-commit 8fa905e2b21c16207ba413fec19e2798f7b1a6f9
-Author: abr4xas <me@abr4xas.org>
-Date:   Wed Jan 14 14:47:06 2015 -0430
-
-    Agregando cambios (estilos e imagenes) en la funcion redireccion.
-
-commit f25f4af4c49a1eff2fe0d0b2c16ef6270eed9f51
-Author: abr4xas <me@abr4xas.org>
-Date:   Wed Jan 14 14:15:27 2015 -0430
-
-    Agregando cambios (estilos e imagenes) en la funcion redireccion
-
-commit 7d0fb71081740b482fc7cca010511938964c2466
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 13:02:28 2015 -0430
-
-    * changelog
-
-commit a248251904d00fa6d2ef3ada94321adde7955ac4
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 13:00:43 2015 -0430
-
-    * cambios menores
-
-commit 9fc57d1611456bccb29bab810013326d9dc47d5a
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 12:55:14 2015 -0430
-
-    * changelog
-
-commit 254d8e54ac9f81fa1ae82196b89f8c474365497e
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 12:53:52 2015 -0430
-
-    * Inclusion de ViserProject
-
-commit 34296564ceff6ea442811fa69735dd30dfc39f57
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 12:15:05 2015 -0430
-
-    * changelog
-
-commit 8c5baff6d721369468e0ca6e5987f25f670d5a41
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 12:14:41 2015 -0430
-
-    * Inclusion de suscripciones
-
-commit c9eab4247bc1add81f40ab6a9ebe61e561bfda8b
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 11:51:34 2015 -0430
-
-    * Preparacion para el redireccionamiento
-
-commit 6fb1286398b86fe834968358cc7139447775e5e1
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 09:32:41 2015 -0430
-
-    * changelog
-
-commit 4fc9284ecc9eda1fb9cb8e9cec5959c8d296b76d
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 14 09:31:54 2015 -0430
-
-    * optimizacion de js.js
-    * optimizacion de imagenes
-
-commit f50bf25597dec83c0c8c7410e394ce126b66d2b9
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Tue Jan 13 23:43:34 2015 -0430
-
-    * changelog
-
-commit 33836bbe3fcfe87963b2e4800f6a4739c30f9653
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Tue Jan 13 23:42:55 2015 -0430
-
-    * se elemina la imagen del estado en travis ci hasta que se hagan las pruebas unitarias
-
-commit 63a27f5788515f78e19a665022ef8cd1a3b958f1
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 20:21:41 2015 -0430
-
-    Agregado Jjedi_ve al planet
-
-commit c58a7f98e939d136adc9adf39921ca07c237bcae
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 20:17:20 2015 -0430
-
-    * changelog
-
-commit 3c5fa0b4a8224aa6cc77e9ffa735dc3513957827
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 20:16:44 2015 -0430
-
-    * solucionado bug en mostrar notas
-
-commit 05a91e13ba526d1eacbf3fec525d46da1ce0d747
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 19:26:32 2015 -0430
-
-    Agregado hackergotchi de @Jjedi_ve
-
-commit 2f982e173a6aabf8cd98624898feb5e74ac6be7f
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 18:46:01 2015 -0430
-
-    Actualizado
-
-commit 8d04c0cd9223c134f777468402372340095038c1
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 17:15:42 2015 -0430
-
-    * changelog
-
-commit d67e880fd5ea209b4ff8ed7d11486ff54c9c7e2c
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 17:15:11 2015 -0430
-
-    * cambios menores
-
-commit 9190a62e1b00d4b3c7d6ce23321e39cf12d9c417
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 16:57:22 2015 -0430
-
-    Actualizando plantilla
-
-commit 1ee394801528500b48e7462854cd4fb27010babf
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 15:49:50 2015 -0430
-
-    Actualizado
-
-commit 23840d16ac91f339d0f3edaa8db020cb89a29312
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 15:49:10 2015 -0430
-
-    Modificado
-
-commit b6dfb9466b9cd46d86ac6b6d153696d47f42dc82
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 15:05:01 2015 -0430
-
-    Actualizado
-
-commit fe1f6c7dde73a392c7a2cc6ca03dd9deee46452b
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 14:49:21 2015 -0430
-
-    Actualizado
-
-commit 97fa625d7ff38e2bbe6dc98d601a3923b5cc4663
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 14:38:11 2015 -0430
-
-    Cambios menores
-
-commit fffb8ea21335a20f365f4e5a63e454fe3f297a53
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 14:33:47 2015 -0430
-
-    * Inclusion y revision de Token
-
-commit f0d5a131a91d8282aeb30db663560717e350053c
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 14:16:43 2015 -0430
-
-    * changelog
-
-commit 241d7e913808438025940f706cb960025dfb5b43
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 14:15:18 2015 -0430
-
-    * Inclusion de Token
-
-commit c586db2049e918fe623d88f3ba77b1400144b050
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 13:54:52 2015 -0430
-
-    * rotador de banner
-
-commit e0065464e53e2c06d1596ae448eb025b4aef34f2
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 13:53:24 2015 -0430
-
-    * changelog
-
-commit 458929f405caec8ec78db51adc9f8d70025be0e5
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 13:52:08 2015 -0430
-
-    * Inclusion de publicidad
-    * mejora en js
-
-commit 2e44bed60ebfc984081e89636b526306808af8be
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:59:59 2015 -0430
-
-    * changelog
-
-commit d82832f36df34ad0ec458bfa0448fc0d35077be7
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:57:05 2015 -0430
-
-    * changelog
-
-commit b5f587fe685a2eca55db70c94712c8f63f856682
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:56:22 2015 -0430
-
-    * Validacion de theme que exista
-
-commit a7742ab15a04a36605e58a0f1b8b15bfd023aa87
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:10:47 2015 -0430
-
-    * changelog
-
-commit de510eff12cebed7f7c58f6238bef9e0da23201d
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:10:19 2015 -0430
-
-    * eliminacion de archivo no necesario
-
-commit e9f3f24e8ecb941cf420afd7e73126ea72d09649
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 11:09:05 2015 -0430
-
-    * Cambios menores
-
-commit dfab7114456bedbba251453c1f54262637c6a6d8
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 10:59:44 2015 -0430
-
-    Cambios menores
-
-commit 64373ad0bf95d8ec301f5f6c3080ef0c086e8559
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 10:20:57 2015 -0430
-
-    * cambios menores
-
-commit 9e5c6fbe07c87aea6e4325a428136e21fa3154d8
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 13 10:20:07 2015 -0430
-
-    * cambios menores
-
-commit 934f80b0482254df15c44e272104966625234c26
-Author: abr4xas <me@abr4xas.org>
-Date:   Tue Jan 13 10:10:55 2015 -0430
-
-    Cambios menores
-
-commit d51c0130431f5db7cbd68737d101e99462d7793b
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 23:43:50 2015 -0430
-
-    Cambios menores
-
-commit 189512bda4e6a57c3c75a803c178cd7a1d623880
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 23:39:05 2015 -0430
-
-    Cambios menores
-
-commit f41d0828ec4aef9ffaa59363cbe01f4d090360a1
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 22:19:58 2015 -0430
-
-    Cambios menores
-
-commit 9eb694a5bf126b2d2a8cdcaf7fb308bb86eb2e90
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 22:19:41 2015 -0430
-
-    Cambios menores
-
-commit 6712f7bf6ed6b4f6e500ea844ee58ccbee8a64a6
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 22:05:42 2015 -0430
-
-    * changelog
-
-commit 37868ff1ef5177344fd442c94316bc82fc9244c4
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 22:04:57 2015 -0430
-
-    * cambios en funcion de validacion de contacto
-
-commit da0263444778dff66c86dd8939e33c70c3e43346
-Merge: e1b29a1 08187b0
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 22:02:22 2015 -0430
-
-    Merge branch 'master' of github.com:Vaslibre/planeta
-    
-    Conflicts:
-    	themes/planetaVaSLibre
-
-commit e1b29a1cde04850bd1030f77599448fedc2d2559
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 22:01:35 2015 -0430
-
-    cambios
-
-commit 08187b061e0dece50f2794b2af40f8a5a51a5d36
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 21:56:12 2015 -0430
-
-    Cambios menores
-
-commit c91da364be8599cdfccb8364cc197372e9fd1853
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 21:54:35 2015 -0430
-
-    Cambios menores
-
-commit ba70c1b3586575b11567b351db3a795114d8a5c4
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 21:47:12 2015 -0430
-
-    Cambios menores
-
-commit b11a6011fe76f5a53e64e7d16dca12b079b25842
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 21:11:39 2015 -0430
-
-    Cambios menores
-
-commit c9c4816e4e555613688e0564510005c01cee14cf
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 21:05:25 2015 -0430
-
-    Cambios menores
-
-commit de50eb8a6d67af909a2c491d955c473fdaab1dc4
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 20:54:35 2015 -0430
-
-    Agregando plantilla
-
-commit c2f8ea95041cb69d438d4879f7391854e348a65a
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 20:39:51 2015 -0430
-
-    Actualizando plantilla
-
-commit 7c915a01f7576b83fdcd8631d82335e443d13fa6
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 17:21:16 2015 -0430
-
-    Agregando plantilla
-
-commit f52dcff0205d7bbd0eb6ff13877e98c2fb5ca075
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 17:20:55 2015 -0430
-
-    Agregando plantilla
-
-commit a44aee3043c6c636eb41152a736af2e61a4ba7e3
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 17:05:44 2015 -0430
-
-    Agregando plantilla
-
-commit db2fe38e6ba3d6d46c01b10801db6fe32bb83ac9
-Author: abr4xas <me@abr4xas.org>
-Date:   Mon Jan 12 17:03:03 2015 -0430
-
-    Actualizando plantilla
-
-commit de999d2c4eaebe4347f2d99413d6424f332f5a1a
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 16:09:21 2015 -0430
-
-    * changelog
-
-commit b6bf966ec6a2cb3a9d1b450cade8e3ad7e7fab9a
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 16:08:36 2015 -0430
-
-    * cambios en theme planetaVaslibre
-
-commit b2f7c3c3a344c19484e51d349596f21df25a2ca3
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:46:53 2015 -0430
-
-    * changelog
-
-commit b62aa28ac588d76b284fad377fa0c062a2fad0e9
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:46:11 2015 -0430
-
-    * Inclusion de formulario y envio de mensaje de contacto
-    * correción en texto de new_feed.php
-
-commit 86902d221a38b644d541c32fe616342d38f86a9d
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:21:20 2015 -0430
-
-    * changelog
-
-commit 187b035438f881484ef2382977f429e36564f5fc
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:19:47 2015 -0430
-
-    * Inclusion de funcion RSS_MOSTRAR()
-    * cambio a theme planetaVaSLibre
-
-commit 6bd400df551dc05d546ec136ef5e309e3f4d13d4
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:13:27 2015 -0430
-
-    * changelog
-
-commit 0db88565e411c89b16ae2f8b480bcc710ed68c33
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 13:12:25 2015 -0430
-
-    * Inclusion de Formulario de Contacto
-    * Inclusion de Nube de Tags
-    * Cambios en Plantilla Vaslibre
-
-commit f7fd25ae9063b65563548fc539d1542ac2a8b05e
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 09:42:25 2015 -0430
-
-    * Incluida nueva plantilla realizada por Abr4xas para el planeta
-
-commit e17a3611c6dab84cac90c3d5cf17f42c89af2005
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 09:28:30 2015 -0430
-
-    * changelog
-
-commit 817b5325c5e54b32086d716417e5c092a5d2ff63
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 12 09:27:27 2015 -0430
-
-    * Inclusion de funcion para la creación de bube de tags
-
-commit 8d0883a57ae4bd99a382f24aa4e7f20f57d55d8b
-Author: xombra <xombra.com@gmail.com>
-Date:   Thu Jan 8 21:09:10 2015 -0430
-
-    * changelog
-
-commit f783cc1294b9f9dd39c6d116472889eb994ed737
-Merge: 20449b9 dd4372c
-Author: xombra <xombra.com@gmail.com>
-Date:   Thu Jan 8 21:08:12 2015 -0430
-
-    Merge branch 'master' of github.com:Vaslibre/planeta
-    
-    Conflicts:
-    	changelog
-    
-    * reparacion de backend.php
-
-commit dd4372c7b245fb40fec723e4c208b493b1154718
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:35:56 2015 -0430
-
-    * changelog
-
-commit 77dde98c6575b348269aa332382e24467e3bd1f0
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:35:18 2015 -0430
-
-    * se crea el archivo ToDo para colocar una lista de las pruebas unitarias que faltan
-
-commit f701e147b596dac32e5181464767fb0fa9a43373
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:25:01 2015 -0430
-
-    * changelog
-
-commit 007e18416d6808fc889e5af46bb686a9fdee32c4
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:24:40 2015 -0430
-
-    * se actualiza el readme para agregar el status de travis ci
-
-commit 2a4c9c0ca9e7b20c4976c1425df327e862491d59
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:21:02 2015 -0430
-
-    * changelog
-
-commit acbfa5de0b78c3ab62f3e90b6276d69233266946
-Author: sinfallas <sinfallas@gmail.com>
-Date:   Thu Jan 8 01:20:43 2015 -0430
-
-    * se agrega el archivo para usar travis ci
-
-commit 20449b9db78a999537064d2cf1cab1f7bcb76bbd
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 7 21:39:57 2015 -0430
-
-    * changelog
-
-commit 74aaacc8a3bfbcaabef8d130bc00fa926fd86c5f
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 7 21:36:39 2015 -0430
-
-    * changelog
-
-commit 18908ed689147ae05757a8945a139b6bbd48b426
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 7 21:35:46 2015 -0430
-
-    * Agrgado xombra.com al feed
-    * agragada cabecera (beta)
-
-commit b28f10280422be912338230f48ab09938ec98601
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 7 09:13:03 2015 -0430
-
-    * changelog
-
-commit ce36f9768a56ea910c8e14507def7259a4fc190c
-Author: xombra <xombra.com@gmail.com>
-Date:   Wed Jan 7 09:12:30 2015 -0430
-
-    * Corregido bug en revision de cache
-
-commit c51a164261a402e875e88fc92d29cf31aa9ef631
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 20:03:15 2015 -0430
-
-    * changelog
-
-commit d2edb8ae81537b76e7eef1dfcdc8e948ab9cbcd0
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 20:02:40 2015 -0430
-
-    * Corregido error en creacion de cache
-
-commit 3400fa305cf6dd3e941e7dce667adb95674769e3
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 20:02:13 2015 -0430
-
-    * changelog
-
-commit 64092d6b665c921b80ea46a74ecbfaee219131bd
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 20:01:11 2015 -0430
-
-    * Corregido bug en js de cookies
-
-commit e9b1531816c4933fc810e06895784a9fefadcad1
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 10:44:29 2015 -0430
-
-    * changelog
-
-commit 41ba0d3f944630691a60d419d596f1131afbcff3
-Author: xombra <xombra.com@gmail.com>
-Date:   Tue Jan 6 10:43:22 2015 -0430
-
-    * Corregido formacion de backend.xml (feed propio)
-    * inclusion de enlace a sitio web | blog
-
-commit 1b124513d29931f8eee1ccae2782c4f058f57093
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 20:41:29 2015 -0430
-
-    * changelog
-
-commit 014853e4f5189c043ab39c4d45fcb2f42385de70
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 20:37:01 2015 -0430
-
-    * Correfido bug con backend.php
-    * agregado el blog de echevemaster
-    * agrgeado icono de blog del sitio
-
-commit ed991fac60eaf20b3c11c4364a6b6151996d9c96
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 17:15:31 2015 -0430
-
-    * changelog
-
-commit f0e4e1edcd2d258ded148bbe587ed1d2b913f04a
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 17:14:55 2015 -0430
-
-    * Correcion en metatag
-    * correciones menores en otros archivos
-
-commit 1e27d0fdfa47c602b9b3edd028864c03e8f0df7a
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 15:09:53 2015 -0430
-
-    * changelog
-
-commit bcc282f090eaee916eae1af0b1bb321c7137e24f
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 15:08:25 2015 -0430
-
-    * optimizada imagen de avatar de pheno y cachoycapote
-    * solucionado bug en content.php
-    * agregado en .htacces Header set Connection keep-alive
-    * agregado sitemap.xml y su generador sitemap.php
-    * solucionado problemas con algunos <div> en content.php
-    * agregado <address> en footer.php
-
-commit e64380ffb69c31e12c3af51e025edc5473a42cd7
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 13:02:18 2015 -0430
-
-    * optimizada imagen de avatar de pheno y cachoycapote
-    * solucionado bug en content.php
-    * agregado en .htacces Header set Connection keep-alive
-
-commit e34c172c9a8e3f9c8ce86d1a4feed5ef2c863322
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 12:14:34 2015 -0430
-
-    * changelog
-
-commit ac0c0f5ad2523db7a1451b04ff5104be114a62a6
-Author: xombra <xombra.com@gmail.com>
-Date:   Mon Jan 5 12:13:55 2015 -0430
-
-    *
-    * reconfigurado para uso de Theme
-    * uso de cdn de jquery y bootstrap
-
-commit ee2142e7b8ae05e2def1b312e1ff1ec3216d0d67
-Author: xombra <xombra.com@gmail.com>
-Date:   Sun Jan 4 22:35:30 2015 -0430
-
-    * changelog
-
-commit 8ddb8b5e161b6c43a81d8007edd329348e542c51
-Author: xombra <xombra.com@gmail.com>
-Date:   Sun Jan 4 22:32:47 2015 -0430
-
-    * Creacion de backend.php para feed propio del sitio
-    * Agregada nuevas variables en el config.php
-
-commit 6268d32bcda6c574b7656360d20bb0e908dd03a0
-Author: xombra <xombra.com@gmail.com>
-Date:   Sun Jan 4 17:33:59 2015 -0430
-
-    * changelog
-
-commit 412e1198cb245e8c203398b8f784af6cdaa2ec5e
-Author: xombra <xombra.com@gmail.com>
-Date:   Sun Jan 4 17:27:32 2015 -0430
-
-    * changelog
-
-commit 2cda2ef2608a674b688f479ca85b1b9b3f831cba
-Author: xombra <xombra.com@gmail.com>
-Date:   Sun Jan 4 17:25:26 2015 -0430
-
-    * solucionado problema en js.js
-    * agregado parametros a funcion RSS()
-    * Creado backend.php para generar el backend.xml
-    * Agragado parametros a META()
-    * pasado al final los javascript en el index.php
-    * eliminada funciones de core.php que no hacian falta
-    * agregado cachoycapote a la lista feeds
-    * sustituido el favicon
-    * corregido enlace rss del sitio
-
-commit bdba3a64c02b9af210a60e74b5ae80c97b03703e
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 3 23:27:50 2015 -0430
-
-    * changelog
-
-commit 667332c0159ff8337fd5553d384a8c87487139a7
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 3 23:25:36 2015 -0430
-
-    * Agregado nuevas variables en el config.php para SEO
-    * Agregada variables de localizacion
-    * Modificado css
-    * Agregado Google Analytics
-    * Modificados algunos Metatags
-    * Agrgado Howto
-
-commit 293ef313d9f6a15aefc74172e6cc06dcd7c12264
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 3 15:52:36 2015 -0430
-
-    * changelog
-
-commit afd375a9cc02b9b4a76b1f7d358a5fa01190f2e0
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 3 15:48:11 2015 -0430
-
-    * Inclusion de envio de nuevo feed
-    * Validacion de valores
-    * Arreglado valor css de enlace
-    * Inclusion de nuevos valores en config.php
-    * agregado humans.txt
-    * .html de mensaje de error en ingreso a new_feed.php
-
-commit 55196e628f33ed98ba3ebdcadccf9a125de24144
-Merge: 24214a1 258839e
-Author: xombra <xombra.com@gmail.com>
-Date:   Sat Jan 3 01:49:49 2015 -0430
-
-    * Merge https://github.com/abr4xas/planeta
-
-commit 258839e5db1d9acfd4c2927cba605accb5f2cff3
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 2 23:19:12 2015 -0430
-
-    actualizado
-
-commit db81650c710fec57cfdc7cb1170a4dffb9683ba0
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 2 23:15:09 2015 -0430
-
-    new file
-
-commit f80e096d76e942b82334a3a5bd04d940ff59e095
-Author: abr4xas <me@abr4xas.org>
-Date:   Fri Jan 2 23:11:38 2015 -0430
-
-    Actualizado, se agrega pagina de error 404
-
-commit 24214a1ea6a2e30ab5e7c66f477e9f2603045cb4
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 2 23:01:37 2015 -0430
-
-    * changelog
-
-commit d96e8e7f9fc2bbf0163d5882a98ace9836e1dca2
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 2 22:28:18 2015 -0430
-
-    * Cambios en CSS
-    * agregada Variables de Redes Sociales
-    * Agregada opcion de nombre de sitio
-    * reducción de codigo en crear cache
-
-commit 4b027a2dcd32a55a1b0cb5f4c1c3f230657ae3b2
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 2 20:24:05 2015 -0430
-
-    * changelog
-
-commit a4ee8d38d040b426d83bd94e732c55191a3ccde8
-Author: xombra <xombra.com@gmail.com>
-Date:   Fri Jan 2 19:36:49 2015 -0430
-
-    * Inicio del Proyecto Planeta de VaSlibre
-
-commit 436abc93f2b17cf266bb3939fb45d52a1e0d4554
-Author: Hector A. Mantellini <xombra@users.noreply.github.com>
-Date:   Fri Jan 2 19:12:23 2015 -0430
-
-    Initial commit
+commit 562f53bcddd48327e9c20b2b71bdfc3226ea76b8 (HEAD -> master, origin/master)
+Author: jose perez <sinfallas@gmail.com>
+Date:   Tue Jan 29 22:55:02 2019 -0400
+
+    * primer commit
